Opened 16 years ago

Closed 16 years ago

#3575 closed bug (fixed)

[Terminal] "Copy Here" context menu doesn't always work

Reported by: diver Owned by: jackburton
Priority: normal Milestone: R1
Component: Applications/Terminal Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

If you drag some file to terminal window using right mouse button and choose Copy Here from context menu you'll get an error about invalid option.

Attachments (1)

terminal.png (71.6 KB ) - added by diver 16 years ago.

Download all attachments as: .zip

Change History (4)

comment:1 by axeld, 16 years ago

Resolution: fixed
Status: newclosed

This seems to have been fixed, at least I can't reproduce it anymore.

comment:2 by diver, 16 years ago

Resolution: fixed
Status: closedreopened
Summary: [Terminal] "Copy Here" context menu doesn't work[Terminal] "Copy Here" context menu doesn't always work

To reproduce:
Create a new folder on Desktop
Drag it to terminal window using right mouse button and choose Copy Here from context menu

by diver, 16 years ago

Attachment: terminal.png added

comment:3 by axeld, 16 years ago

Resolution: fixed
Status: reopenedclosed

The original bug has been fixed indeed, so please open a new ticket next time!

Anyway, fixed that new issue in hrev30672, thanks for the note.

Note: See TracTickets for help on using tickets.