* Fixed a typo that prevented the right context menu copy action to work   on directories. See ticket #3575.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30672 a95241bf-73f2-0310-859d-f6bbb57e9c96